--- a/src/main/resources/templates/artistSearch/artistSearch.html
+++ b/src/main/resources/templates/artistSearch/artistSearch.html
@@ -11,12 +11,10 @@
             class="form-control"
             type="search"
             name="search"
-            placeholder="artist"
+            placeholder="artiste"
             aria-label="search"
           />
-          <button class="btn btn-outline-secondary mx-2" type="submit">
-            Search
-          </button>
+          <button class="btn btn-outline-secondary mx-2 fas fa-search" type="submit"></button>
         </div>
 
         <div
