--- a/src/main/resources/templates/header/navbar.html
+++ b/src/main/resources/templates/header/navbar.html
@@ -18,8 +18,8 @@
        
       </ul>
       <form class="d-flex" th:action="@{/artistSearch/0}">
-        <input class="form-control me-2" type="search" placeholder="artist" aria-label="Search" name="search">
-        <button class="btn btn-outline-secondary" type="submit">Search</button>
+        <input class="form-control me-2" type="search" placeholder="artiste" aria-label="Search" name="search">
+        <button class="btn btn-outline-secondary fas fa-search" type="submit"></button>
       </form>
     </div>
   </div>
