--- a/src/main/resources/templates/newArtistPage/info.html
+++ b/src/main/resources/templates/newArtistPage/info.html
@@ -1,6 +1,6 @@
 <!-- artist Name -->
 <div class="mb-3">
-  <label for="artistName">Nom de scene <span class="text-danger">*</span></label>
+  <label for="artistName">Nom de scène <span class="text-danger">*</span></label>
   <input
     type="text"
     class="form-control"
@@ -14,7 +14,7 @@
 </div>
 <!-- web Site -->
 <div class="mb-3">
-  <label for="webSite">site web</label>
+  <label for="webSite">Site web</label>
   <input
     type="text"
     class="form-control"
