--- a/src/main/resources/templates/account/profil.html
+++ b/src/main/resources/templates/account/profil.html
@@ -11,14 +11,14 @@
         <div class="card-body p-4">
           <h3 class="card-text" th:text="${'Prenom : ' + user.firstName}"></h3>
           <h3 class="card-text" th:text="${'Nom : ' + user.lastName}"></h3>
-          <h3 class="card-text pb-2" th:text="${'mail : ' + user.email}"></h3>
+          <h3 class="card-text pb-2" th:text="${'E-mail : ' + user.email}"></h3>
           <p class="card-text" sec:authorize="hasRole('ROLE_USER')">Profil Standard </p>
-          <p class="card-text" sec:authorize="hasRole('ROLE_ARTIST')">Profil Artist</p>
+          <p class="card-text" sec:authorize="hasRole('ROLE_ARTIST')">Profil Artiste</p>
           <p class="card-text" sec:authorize="hasRole('ROLE_PRO')">Profil Pro</p>
         </div>
         
       </div>
-      <h4 class="text-center p-3 mb-5"><a th:href="@{modify/}">modifier mon compte</a></h4>
+      <h4 class="text-center p-3 mb-5"><a th:href="@{modify/}">Modifier mon compte</a></h4>
     </main>
 
     <footer th:replace="@{footer/footer}"></footer>
