--- a/src/main/resources/templates/newArtistPage/audioTracks.html
+++ b/src/main/resources/templates/newArtistPage/audioTracks.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="mb-3 col-md-6" th:each="track: ${artist.trackList}">
-      <label for="audioName" class="form-label">Nom Titre</label>
+      <label for="audioName" class="form-label">Nom du Titre</label>
       <input
         type="text"
         class="form-control"
