--- a/src/main/resources/templates/newArtistPage/socialNetworks.html
+++ b/src/main/resources/templates/newArtistPage/socialNetworks.html
@@ -1,6 +1,6 @@
  <!-- social networks -->
  <div class="mb-4" th:each=" socialNetwork : ${artist.socialNetworkList}">
-    <label for="socialUrl1">Reseau social - URL et NOM</label>
+    <label for="socialUrl1">Reseau social - Lien et Nom</label>
     <input
       type="text"
       class="form-control"
