--- a/src/main/resources/templates/account/myAccount.html
+++ b/src/main/resources/templates/account/myAccount.html
@@ -21,7 +21,7 @@
         class="d-flex flex-md-row flex-column-reverse justify-content-between"
       >
         <div>
-          <h2 class="fas fa-star m-5">Mes favoris</h2>
+          <h2 class="m-5"> <span class="fas fa-star"></span> Mes favoris</h2>
         </div>
         <div class="px-5">
           <p>
