test with xmlns

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="head/head :: head('SpringBoard')"></head>
   <body class="bg-dark">
     <header th:include="@{/header/navbar}"></header>
