--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html lang="fr" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="head/head :: head('SpringBoard')"></head>
-  <body class="bg-dark">
-    <header th:include="@{/header/navbar}"></header>
-   
-    <main class="mx-4">
-      <article>
-        <div th:replace="@{/artistCard/artistCard}"></div>
-      </article>
-    </main>
-
-    <footer th:replace="@{footer/footer}"></footer>
-    
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <h1>test</h1>
+</body>
 </html>
