--- a/src/main/resources/templates/head/head.html
+++ b/src/main/resources/templates/head/head.html
@@ -1,7 +1,7 @@
 
 
   <head th:fragment="head(title)">
-    <meta th:replace="@{/head/meta}" />
+    <meta th:replace="@{head/meta}" />
     <title th:text="${title}"></title>
-    <link th:replace="@{/head/link}" />
+    <link th:replace="@{head/link}" />
   </head>
