--- a/src/main/resources/templates/login/logout.html
+++ b/src/main/resources/templates/login/logout.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head th:replace="head/head :: head('SpringBoard')"></head>
   <body class="bg-dark">
-    <header th:include="@{/header/navbar}"></header>
+    <header th:include="@{header/navbar}"></header>
 
     <main class="mx-4 text-white">
       <div class=" p-5 text-center ">
