--- a/src/main/resources/templates/account/profil.html
+++ b/src/main/resources/templates/account/profil.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head th:replace="head/head :: head('SpringBoard')"></head>
   <body class="bg-dark">
-    <header th:include="@{/header/navbar}"></header>
+    <header th:include="@{header/navbar}"></header>
    
     <main class="m-4">
       <h1 class="card-img-top fas fa-user-circle text-white text-center mb-5"></h1>
