--- a/src/main/resources/templates/artistSearch/artistSearch.html
+++ b/src/main/resources/templates/artistSearch/artistSearch.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head th:replace="head/head :: head('SpringBoard')"></head>
   <body class="bg-dark">
-    <header th:include="@{/header/navbar}"></header>
+    <header th:include="@{header/navbar}"></header>
 
     <main class="mx-4">
       <form th:action="@{/artistSearch/0}">
@@ -44,7 +44,7 @@
         <div class="row">
           <aside class="col-3"></aside> -->
           <!-- <article class="col-9"> -->
-            <div th:replace="@{/artistCard/artistCard}"></div>
+            <div th:replace="@{artistCard/artistCard}"></div>
             <nav aria-label="Page navigation">
               <ul class="pagination justify-content-center">
                 <li class="page-item" th:each="page : ${pages}">
