--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head th:replace="head/head :: head('SpringBoard')">
   <body class="bg-dark">
-    <header th:include="@{/header/navbar}"></header>
+    <header th:include="@{header/navbar}"></header>
    
     <main class="text-white text-center m-5">
       <h1 class="m-5">404 - impossible de trouver la page</h1>
