--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head th:replace="head/head :: head('SpringBoard - Connexion')"></head>
   <body class="bg-dark">
-    <header th:include="@{/header/navbar}"></header>
+    <header th:include="@{header/navbar}"></header>
     <!-- show notification on error -->
     <div th:if="${param.error}" class="alert-danger p-3">
       Email ou mot de passe invalide
