--- a/src/main/resources/templates/newArtistPage/newArtistPage.html
+++ b/src/main/resources/templates/newArtistPage/newArtistPage.html
@@ -3,7 +3,7 @@
 <head th:replace="head/head :: head('SpringBoard - Nouvel Artist')"></head>
 
   <body class="bg-dark text-white">
-    <header th:include="@{/header/navbar}"></header>
+    <header th:include="@{header/navbar}"></header>
   <body class=" ">
     <main>
       <h1 class="text-center ">Créer votre page artiste ! 🎸</h1>
@@ -18,22 +18,22 @@
             <div class="row">
               
               <!-- info Block -->
-              <div class="card-body  col-md-5 mx-3" th:include="@{/newArtistPage/info}"></div>
+              <div class="card-body  col-md-5 mx-3" th:include="@{newArtistPage/info}"></div>
               <!-- socialNetworks -->
-              <div class="card-body col-md-5 mx-3" th:include="@{/newArtistPage/socialNetworks}"></div>
+              <div class="card-body col-md-5 mx-3" th:include="@{newArtistPage/socialNetworks}"></div>
             </div>
           </div>
           <!-- bloc audio tracks -->
           <h3 class="mt-5">Vos pistes audio <span class="text-danger">*</span></h3>
           <p>Merci d'enregistrer au moins une piste avec son titre </p>
-          <div th:replace="@{/newArtistPage/audioTracks}"></div>
+          <div th:replace="@{newArtistPage/audioTracks}"></div>
             
 
           <!-- bloc cover -->
           <h3 class="mt-5">Votre photo de page <span class="text-danger">*</span></h3>
           <div class="container">
             <div class="row">
-              <div th:replace="@{/newArtistPage/cover}"></div>
+              <div th:replace="@{newArtistPage/cover}"></div>
             </div>
           </div>
             
