--- a/src/main/resources/templates/newArtistPage/savePageOk.html
+++ b/src/main/resources/templates/newArtistPage/savePageOk.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr" xmlns:th="http://www.thymeleaf.org">
   <head>
-    <meta th:replace="@{/head/meta}" />
+    <meta th:replace="@{head/meta}" />
     <title>Success!</title>
-    <link th:replace="@{/head/link}" />
+    <link th:replace="@{head/link}" />
   </head>
   <body class="bg-dark text-white">
-    <header th:include="@{/header/navbar}"></header>
+    <header th:include="@{header/navbar}"></header>
   <body>
     <main class="text-center" style="margin-bottom: 20rem ;">
       <h1 class="pt-4"  th:text="${status}"></h1>
