--- a/src/main/resources/templates/artistSearch/artistSearch.html
+++ b/src/main/resources/templates/artistSearch/artistSearch.html
@@ -51,7 +51,7 @@
                   <a
                     class="page-link text-dark"
                     th:href="@{'/artistSearch/' + ${page}}"
-                    th:text="${page}"
+                    th:text="${page + 1}"
                   ></a>
                 </li>
               </ul>
