--- a/src/main/resources/templates/deleteArtistPage/delete.html
+++ b/src/main/resources/templates/deleteArtistPage/delete.html
@@ -11,12 +11,12 @@
       <h1 class="p-5">supprimer ma page artiste 😓</h1>
       <article class="m-5">
         <h3 class="p-2">
-          Etes vous sûr de vouloir supprimer votre page artiste ?
+          Etes-vous sûr de vouloir supprimer votre page artiste ?
         </h3>
         <h1 class="fas fa-exclamation-triangle text-danger mb-5"></h1>
         <form th:action=@{/artist/deleteArtistPage} method="post" class="pb-5">
           <button class="btn btn-lg btn-danger" type="submit">
-            Supprimer mon compte
+            Supprimer ma page
           </button>
         </form>
       </article>
