--- a/src/main/resources/templates/header/login.html
+++ b/src/main/resources/templates/header/login.html
@@ -4,8 +4,8 @@
     <a sec:authorize="isAuthenticated()" th:href="@{/myAccount/profil}">Profil</a>
     <a sec:authorize="isAuthenticated()" th:href="@{/myAccount}">Mon Compte</a>
     <a sec:authorize="isAuthenticated()" th:href="@{/logout}" >Se Deconnecter</a>
-    <a sec:authorize="isAnonymous()" th:href="@{/register}">créer un compte</a>
-    <a sec:authorize="isAnonymous()"th:href="@{/login}">se connecter</a>
+    <a sec:authorize="isAnonymous()" th:href="@{/register}">Créer un compte</a>
+    <a sec:authorize="isAnonymous()"th:href="@{/login}">Se connecter</a>
 </div> 
     
    
