--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -5,7 +5,7 @@
     <header th:include="@{header/navbar}"></header>
     <!-- show notification on error -->
     <div th:if="${param.error}" class="alert-danger p-3">
-      Email ou mot de passe invalide
+      E-mail ou mot de passe invalide
     </div>
 
     <!-- show notification of logout -->
