--- a/src/main/resources/templates/login/logout.html
+++ b/src/main/resources/templates/login/logout.html
@@ -6,10 +6,10 @@
 
     <main class="mx-4 text-white">
       <div class=" p-5 text-center ">
-          <h2> Voulez-vous vous deconnecter ?</h2>
+          <h2> Voulez-vous vous déconnecter ?</h2>
         <form th:action="@{/logout}" method="post">
           <button type="submit" class="btn btn-danger mb-5">
-            Se Deconnecter
+            Se Déconnecter
           </button>
         </form>
       </div>
