--- a/src/main/resources/templates/modifyArtistPage/modifyArtistPage.html
+++ b/src/main/resources/templates/modifyArtistPage/modifyArtistPage.html
@@ -32,7 +32,7 @@
             
 
           <!-- bloc cover -->
-          <h3 class="mt-5">Votre photo de page <span class="text-danger">*</span></h3>
+          <h3 class="mt-5">Votre photo artiste <span class="text-danger">*</span></h3>
           
         <div th:replace="@{modifyArtistPage/modifyCover}"></div>
               
