--- a/src/main/resources/templates/modifyArtistPage/modifyCover.html
+++ b/src/main/resources/templates/modifyArtistPage/modifyCover.html
@@ -10,7 +10,7 @@
           name="modifyCover"
           value="true"
         />
-        <label for="change">Voulez vous change votre photo de page ?</label>
+        <label for="change">Voulez vous change votre photo ?</label>
       </div>
 
       <div class="d-none" id="coverBlock">
