--- a/src/main/resources/templates/newArtistPage/checkIsInList.html
+++ b/src/main/resources/templates/newArtistPage/checkIsInList.html
@@ -11,7 +11,7 @@
       
     />
     <label class="form-check-label" for="checkContact">
-      J'accepte que mon contact apparaisse dans la liste des
+      J'accepte que mes coordonnées apparaissent dans la liste des
       artistes
     </label>
   </div>
