--- a/src/main/resources/templates/newArtistPage/newArtistPage.html
+++ b/src/main/resources/templates/newArtistPage/newArtistPage.html
@@ -30,7 +30,7 @@
             
 
           <!-- bloc cover -->
-          <h3 class="mt-5">Votre photo de page <span class="text-danger">*</span></h3>
+          <h3 class="mt-5">Votre photo artiste <span class="text-danger">*</span></h3>
           <div class="container">
             <div class="row">
               <div th:replace="@{newArtistPage/cover}"></div>
