change delete page

--- a/src/main/resources/templates/deleteArtistPage/delete.html
+++ b/src/main/resources/templates/deleteArtistPage/delete.html
@@ -16,8 +16,7 @@
         <h1 class="fas fa-exclamation-triangle text-danger mb-5"></h1>
         <form th:action=@{/artist/deleteArtistPage} method="post" class="pb-5">
           <button class="btn btn-lg btn-danger" type="submit">
-            Supprimer mon compte
-          </button>
+            Supprimer ma page
         </form>
       </article>
     </main>
