footer bottom page

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,5 +1,14 @@
 body {
     background-color: #212529;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+
+}
+
+main{
+   flex: 1;
 }
 
 a {
