--- a/src/main/resources/templates/artistSearch/artistSearch.html
+++ b/src/main/resources/templates/artistSearch/artistSearch.html
@@ -4,7 +4,7 @@
   <body class="bg-dark">
     <header th:include="@{/header/navbar}"></header>
 
-    <main class="mx-4">
+    <main class="m-4">
       <form th:action="@{/artistSearch/0}">
         <div class="d-flex m-2 p-3">
           <input
